# language-krill

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  language-krill.cabal  language-sill.cabal  stack.yaml
Language/Krill/: AST.hs
Language/Krill/Desugaring/: Desugar.hs  Syntax.hs
Language/Krill/Monad/: Compiler.hs  Error.hs
Language/Krill/Parser/: AlexUserState.hs  Annotated.hs  Lexer.x  Location.hs  Named.hs  Parser.y  Syntax.hs  Token.hs
Language/Krill/TypeChecker/: Context.hs  Contractivity.hs  FreeVariables.hs  Subtyping.hs  TypeChecker.hs  Types.hs
Language/Krill/Utility/: List.hs  Pretty.hs
Language/Sill/: AST.hs  Elaborator.hs
Language/Sill/Desugaring/: Desugar.hs  Syntax.hs
Language/Sill/Monad/: Compiler.hs  Error.hs
Language/Sill/Parser/: AlexUserState.hs  Annotated.hs  Lexer.x  Location.hs  Named.hs  Parser.y  Syntax.hs  Token.hs
Language/Sill/Parser/Monad (deprecated)/: Lexer.hs-boot  Monad.hs
Language/Sill/TypeChecker/: Common.hs  Context.hs  Contractivity.hs  FreeVariables.hs  Subtyping.hs  TypeChecker.hs  Types.hs  Utility.hs
Language/Sill/Utility/: Error.hs  List.hs  Pretty.hs
compiler/: Args.hs  Main.hs
src/: Main.hs
syntax/: sill.vim
tests/: bit_string.krill  bit_string.sill  elaborator1.sill  elaborator2.sill  elaborator3.sill  empty_choices.sill  error0.sill  error1.krill  error2.krill  even-odd.krill  parser0.krill  parser1.sill  parser2.sill  typechecker0.krill  typechecker1.krill  typechecker1.sill  typechecker2.sill  typechecker3.krill  typechecker3.sill  typechecker4.krill  typechecker4.sill  typechecker5.sill  typeerror0.krill  typeerror1.sill  typeerror2.sill  typeerror3.krill
