name:                language-krill
version:             0.1.0.0
category:            Language
synopsis:            Krill programming language
homepage:            https://github.com/cacay/language-krill

license:             MIT
license-file:        LICENSE

author:              Josh Acay
maintainer:          cacay@cmu.edu

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

library

  default-language:      Haskell2010

  exposed-modules:       Language.Krill.AST
                         Language.Krill.Desugaring.Syntax
                         Language.Krill.Desugaring.Desugar
                         Language.Krill.Monad.Compiler
                         Language.Krill.Parser.Parser
                         Language.Krill.Parser.Annotated
                         Language.Krill.Parser.Location
                         Language.Krill.Parser.Syntax
                         Language.Krill.Parser.Token
                         Language.Krill.TypeChecker.TypeChecker

  other-modules:         Language.Krill.Monad.Error
                         Language.Krill.Parser.Lexer
                         Language.Krill.Parser.AlexUserState
                         Language.Krill.TypeChecker.Context
                         Language.Krill.TypeChecker.Contractivity
                         Language.Krill.TypeChecker.FreeVariables
                         Language.Krill.TypeChecker.Subtyping
                         Language.Krill.TypeChecker.Types
                         Language.Krill.Utility.List
                         Language.Krill.Utility.Pretty

  build-tools:           alex, happy

  build-depends:         base >= 4.6,
                         microlens >= 0.3.4,
                         microlens-mtl >= 0.1.5,
                         microlens-th >= 0.2.1,
                         transformers >= 0.2,
                         containers >= 0.5,
                         dlist == 0.7.1.*,
                         array >= 0.4,
                         bytestring == 0.10.6.*,
                         mtl >= 2.2.1 && < 2.3,
                         pretty == 1.1.3.*

  default-extensions:    PatternGuards,
                         ScopedTypeVariables,
                         MultiParamTypeClasses

  other-extensions:      FlexibleInstances
                         GeneralizedNewtypeDeriving

  ghc-options:           -fwarn-incomplete-patterns
                         -- -fwarn-unused-imports


executable krill

  default-language:     Haskell2010

  hs-source-dirs:       compiler

  main-is:              Main.hs

  build-depends:        base >= 4.6,
                        transformers >= 0.2,
                        mtl >= 2.2.1 && < 2.3,
                        bytestring == 0.10.6.*,
                        optparse-applicative == 0.12.0.*,
                        pretty == 1.1.3.*,
                        language-krill

