name:                language-krill
version:             0.1.0.0
category:            Language
synopsis:            Krill programming language
homepage:            https://github.com/cacay/language-krill

license:             MIT
license-file:        LICENSE

author:              Josh Acay
maintainer:          cacay@cmu.edu

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

library

  default-language:      Haskell2010

  exposed-modules:       Language.Krill.AST
                         Language.Krill.Desugaring.Syntax
                         Language.Krill.Desugaring.Desugar
                         Language.Krill.Monad.Compiler
                         Language.Krill.Parser.Parser
                         Language.Krill.Parser.Annotated
                         Language.Krill.Parser.Location
                         Language.Krill.Parser.Syntax
                         Language.Krill.Parser.Token
                         Language.Krill.TypeChecker.TypeChecker

  other-modules:         Language.Krill.Monad.Error
                         Language.Krill.Parser.Lexer
                         Language.Krill.Parser.AlexUserState
                         Language.Krill.TypeChecker.Context
                         Language.Krill.TypeChecker.Contractivity
                         Language.Krill.TypeChecker.FreeVariables
                         Language.Krill.TypeChecker.Subtyping
                         Language.Krill.TypeChecker.Types
                         Language.Krill.Utility.List
                         Language.Krill.Utility.Pretty

  build-tools:           alex, happy

  build-depends:         base >= 4.6,
                         microlens,
                         microlens-mtl,
                         microlens-th,
                         transformers,
                         containers,
                         dlist,
                         array,
                         bytestring,
                         mtl,
                         pretty

  default-extensions:    PatternGuards,
                         ScopedTypeVariables,
                         MultiParamTypeClasses

  other-extensions:      FlexibleInstances
                         GeneralizedNewtypeDeriving

  ghc-options:           -fwarn-incomplete-patterns
                         -- -fwarn-unused-imports


executable krill

  default-language:     Haskell2010

  hs-source-dirs:       compiler

  main-is:              Main.hs

  build-depends:        base >= 4.6,
                        transformers,
                        mtl,
                        bytestring,
                        optparse-applicative,
                        pretty,
                        language-krill

